[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "archive-object"
description = "archive-object description"
authors = [
    { name = "Hakim Cheikh", email = "hakimcheikh@yahoo.fr" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = []
dynamic = ["version"]

[project.urls]
# homepage = ""
# documentation = ""
# repository = ""
# "Bug Tracker" = ""

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/archive_object/_version.py"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "bandit",
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-datadir>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-datadir>=1.0",
    "nox>=2022",
]
doc = [
    "mkdocs-material>=8.0,<9.0",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=archive_object --cov-fail-under=80 --cov-config=.coveragerc"

[tool.isort]
profile = "black"

[project.scripts]
